--- a/src/SvgBlazor.Docs/Shared/NavMenu.razor
+++ b/src/SvgBlazor.Docs/Shared/NavMenu.razor
@@ -20,6 +20,12 @@
         </li>
 
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/elements/svg" Match="NavLinkMatch.All">
+                <span class="oi oi-chevron-right" aria-hidden="true"></span> SVG
+            </NavLink>
+        </li>
+
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="/elements/circle" Match="NavLinkMatch.All">
                 <span class="oi oi-chevron-right" aria-hidden="true"></span> Circle
             </NavLink>
