Fix position of GetBoundingBox button

--- a/src/SvgBlazor.Docs/Pages/Elements/SvgComponent/Examples/SvgComponentGetBoundingBoxExample.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/SvgComponent/Examples/SvgComponentGetBoundingBoxExample.razor
@@ -1,12 +1,24 @@
 ﻿@using System.Drawing
 
-<SvgComponent @ref="svg" Width="100" Height="100" />
-<button @onclick="OnButtonClickedCalculateBoundingBox">Calculate the bounding box</button>
+<div>
+    <div>
+        <SvgComponent @ref="svg" Width="100" Height="100" />
+    </div>
+    <div>
+        <button type="button"
+                class="btn btn-primary"
+                @onclick="OnButtonClickedCalculateBoundingBox">
+            Calculate the bounding box
+        </button>
+    </div>
 
-@if (!boundingBox.IsEmpty)
-{
-    <p>Boudning box: @boundingBox</p>
-}
+    @if (!boundingBox.IsEmpty)
+    {
+        <div class="mt-4">
+            <p>Boudning box: @boundingBox</p>
+        </div>
+    }
+</div>
 
 @code
 {
