--- a/src/SvgBlazor.Docs/Pages/Elements/SvgComponent/Examples/SvgComponentGetBoundingBoxExample.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/SvgComponent/Examples/SvgComponentGetBoundingBoxExample.razor
@@ -1,23 +1,17 @@
 ﻿@using System.Drawing
 
 <div>
-    <div>
-        <SvgComponent @ref="svg" Width="100" Height="100" />
-    </div>
+    <SvgComponent @ref="svg" Width="100" Height="100" />
+</div>
+<div>
     <div>
         <button type="button"
-                class="btn btn-primary"
+                class="btn btn-primary ml-4"
                 @onclick="OnButtonClickedCalculateBoundingBox">
             Calculate the bounding box
         </button>
+        <p class="mt-4">Bounding box: @(boundingBox.IsEmpty ? "Click the button to calculate" : boundingBox)</p>
     </div>
-
-    @if (!boundingBox.IsEmpty)
-    {
-        <div class="mt-4">
-            <p>Boudning box: @boundingBox</p>
-        </div>
-    }
 </div>
 
 @code
