Remove the unnecessary horizontal line in the API methods table

--- a/src/SvgBlazor.Docs/Components/ElementApiDocs.razor
+++ b/src/SvgBlazor.Docs/Components/ElementApiDocs.razor
@@ -28,18 +28,12 @@
 
 <h3>Methods</h3>
 <table class="table">
-    <colgroup>
-        <col style="width: 20%;">
-        <col style="width: 20%;">
-        <col style="width: 15%;">
-        <col style="width: 45%;">
-    </colgroup>
     <thead>
         <tr>
-            <th>Name</th>
-            <th>Parameters</th>
-            <th>Return value</th>
-            <th>Description</th>
+            <th style="width: 20%;">Name</th>
+            <th style="width: 20%;">Parameters</th>
+            <th style="width: 15%;">Return value</th>
+            <th style="width: 45%;">Description</th>
         </tr>
     </thead>
     <tbody>
