Remove NavMenu icons

--- a/src/SvgBlazor.Docs/Shared/NavMenu.razor
+++ b/src/SvgBlazor.Docs/Shared/NavMenu.razor
@@ -9,85 +9,85 @@
     <ul class="nav flex-column">
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Start
+                Start
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="/elements/svgcomponent" Match="NavLinkMatch.All">
-                <span class="oi oi-chevron-right" aria-hidden="true"></span> SVG component
+                SVG component
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="/elements/svg" Match="NavLinkMatch.All">
-                <span class="oi oi-chevron-right" aria-hidden="true"></span> SVG
+                SVG
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="/elements/circle" Match="NavLinkMatch.All">
-                <span class="oi oi-chevron-right" aria-hidden="true"></span> Circle
+                Circle
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="/elements/ellipse" Match="NavLinkMatch.All">
-                <span class="oi oi-chevron-right" aria-hidden="true"></span> Ellipse
+                Ellipse
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="/elements/line" Match="NavLinkMatch.All">
-                <span class="oi oi-chevron-right" aria-hidden="true"></span> Line
+                Line
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="/elements/polygon" Match="NavLinkMatch.All">
-                <span class="oi oi-chevron-right" aria-hidden="true"></span> Polygon
+                Polygon
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="/elements/rect" Match="NavLinkMatch.All">
-                <span class="oi oi-chevron-right" aria-hidden="true"></span> Rect
+                Rect
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="/elements/g" Match="NavLinkMatch.All">
-                <span class="oi oi-chevron-right" aria-hidden="true"></span> G
+                G
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="/elements/text" Match="NavLinkMatch.All">
-                <span class="oi oi-chevron-right" aria-hidden="true"></span> Text
+                Text
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="/attributes/stroke" Match="NavLinkMatch.All">
-                <span class="oi oi-chevron-right" aria-hidden="true"></span> Stroke
+                Stroke
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="/attributes/fill" Match="NavLinkMatch.All">
-                <span class="oi oi-chevron-right" aria-hidden="true"></span> Fill
+                Fill
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="/elements/path" Match="NavLinkMatch.All">
-                <span class="oi oi-chevron-right" aria-hidden="true"></span> Path
+                Path
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="/svgvalue" Match="NavLinkMatch.All">
-                <span class="oi oi-chevron-right" aria-hidden="true"></span> SvgValue
+                SvgValue
             </NavLink>
         </li>
     </ul>
