--- a/src/SvgBlazor.Docs/Shared/NavMenu.razor
+++ b/src/SvgBlazor.Docs/Shared/NavMenu.razor
@@ -14,79 +14,79 @@
         </li>
 
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="/elements/svgcomponent" Match="NavLinkMatch.All">
+            <NavLink class="nav-link" href="elements/svgcomponent" Match="NavLinkMatch.All">
                 SVG component
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="/elements/svg" Match="NavLinkMatch.All">
+            <NavLink class="nav-link" href="elements/svg" Match="NavLinkMatch.All">
                 SVG
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="/elements/circle" Match="NavLinkMatch.All">
+            <NavLink class="nav-link" href="elements/circle" Match="NavLinkMatch.All">
                 Circle
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="/elements/ellipse" Match="NavLinkMatch.All">
+            <NavLink class="nav-link" href="elements/ellipse" Match="NavLinkMatch.All">
                 Ellipse
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="/elements/line" Match="NavLinkMatch.All">
+            <NavLink class="nav-link" href="elements/line" Match="NavLinkMatch.All">
                 Line
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="/elements/polygon" Match="NavLinkMatch.All">
+            <NavLink class="nav-link" href="elements/polygon" Match="NavLinkMatch.All">
                 Polygon
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="/elements/rect" Match="NavLinkMatch.All">
+            <NavLink class="nav-link" href="elements/rect" Match="NavLinkMatch.All">
                 Rect
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="/elements/g" Match="NavLinkMatch.All">
+            <NavLink class="nav-link" href="elements/g" Match="NavLinkMatch.All">
                 G
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="/elements/text" Match="NavLinkMatch.All">
+            <NavLink class="nav-link" href="elements/text" Match="NavLinkMatch.All">
                 Text
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="/attributes/stroke" Match="NavLinkMatch.All">
+            <NavLink class="nav-link" href="attributes/stroke" Match="NavLinkMatch.All">
                 Stroke
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="/attributes/fill" Match="NavLinkMatch.All">
+            <NavLink class="nav-link" href="attributes/fill" Match="NavLinkMatch.All">
                 Fill
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="/elements/path" Match="NavLinkMatch.All">
+            <NavLink class="nav-link" href="elements/path" Match="NavLinkMatch.All">
                 Path
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="/svgvalue" Match="NavLinkMatch.All">
+            <NavLink class="nav-link" href="svgvalue" Match="NavLinkMatch.All">
                 SvgValue
             </NavLink>
         </li>
