Implement text-anchor in SvgText

--- a/src/SvgBlazor.Docs/Pages/Elements/Text/TextPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Text/TextPage.razor
@@ -19,5 +19,7 @@
 
 <h4>SpacingAndGlyphs</h4>
 <ExampleComponent Height="50" ExampleCode="@(new TextLengthAdjustSpacingAndGlyphsExample())" />
+<h4>TextAnchor</h4>
+<ExampleComponent Height="110" Width="400" ExampleCode="@(new TextTextAnchorExample())" />
 
 <ElementApiDocs ElementType="@typeof(SvgText)" />
