Implement dominant-baseline in SvgText

--- a/src/SvgBlazor.Docs/Pages/Elements/Text/TextPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Text/TextPage.razor
@@ -21,5 +21,7 @@
 <ExampleComponent Height="50" ExampleCode="@(new TextLengthAdjustSpacingAndGlyphsExample())" />
 <h4>TextAnchor</h4>
 <ExampleComponent Height="110" Width="400" ExampleCode="@(new TextTextAnchorExample())" />
+<h4>DominantBaseline</h4>
+<ExampleComponent Height="110" Width="200" ExampleCode="@(new TexDominantBaselineExample())" />
 
 <ElementApiDocs ElementType="@typeof(SvgText)" />
