--- a/src/SvgBlazor.Docs/Shared/NavMenu.razor
+++ b/src/SvgBlazor.Docs/Shared/NavMenu.razor
@@ -86,8 +86,13 @@
         </li>
 
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="svgvalue" Match="NavLinkMatch.All">
+            <NavLink class="nav-link" href="elements/svgvalue" Match="NavLinkMatch.All">
                 SvgValue
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="elements/svguse" Match="NavLinkMatch.All">
+                SvgUse
             </NavLink>
         </li>
     </ul>
